crates/crochet_parser/src/snapshots/crochet_parser__tests__declarations-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let rec f = () => f();\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..22,
                pattern: Pattern {
                    span: 8..9,
                    kind: Ident(
                        BindingIdent {
                            id: Ident {
                                span: 8..9,
                                name: "f",
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 8..21,
                        kind: Fix(
                            Fix {
                                expr: Expr {
                                    span: 8..21,
                                    kind: Lambda(
                                        Lambda {
                                            params: [
                                                EFnParam {
                                                    pat: Ident(
                                                        EFnParamBindingIdent {
                                                            span: 0..0,
                                                            id: Ident {
                                                                span: 8..9,
                                                                name: "f",
                                                            },
                                                        },
                                                    ),
                                                    type_ann: None,
                                                    optional: false,
                                                    mutable: false,
                                                },
                                            ],
                                            body: Expr {
                                                span: 12..21,
                                                kind: Lambda(
                                                    Lambda {
                                                        params: [],
                                                        body: Expr {
                                                            span: 18..21,
                                                            kind: App(
                                                                App {
                                                                    lam: Expr {
                                                                        span: 18..19,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                span: 18..19,
                                                                                name: "f",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                    args: [],
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        is_async: false,
                                                        return_type: None,
                                                        type_params: None,
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            is_async: false,
                                            return_type: None,
                                            type_params: None,
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
