crates/crochet_parser/src/snapshots/crochet_parser__tests__declarations.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = 5;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..10,
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            id: Ident {
                                span: 4..5,
                                name: "x",
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 8..9,
                        kind: Lit(
                            Num(
                                Num {
                                    span: 8..9,
                                    value: "5",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
