crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-11.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = ({mut x, y: mut z}) => {};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..36,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..35,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            span: 11..28,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Assign(
                                                            AssignPatProp {
                                                                span: 12..17,
                                                                key: BindingIdent {
                                                                    name: "x",
                                                                    mutable: true,
                                                                    span: 16..17,
                                                                },
                                                                value: None,
                                                            },
                                                        ),
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                key: Ident {
                                                                    span: 19..20,
                                                                    name: "y",
                                                                },
                                                                value: Pattern {
                                                                    span: 22..27,
                                                                    kind: Ident(
                                                                        BindingIdent {
                                                                            name: "z",
                                                                            mutable: true,
                                                                            span: 22..27,
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 0..0,
                                    kind: Empty,
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
